// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button renders the UI snapshot correctly 1`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="inputID-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    htmlFor="inputID"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="inputID"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="inputID-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 2`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="radio-checked-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    data-checked=""
    htmlFor="radio-checked"
  >
    <input
      checked={true}
      className="chakra-radio__input"
      disabled={false}
      id="radio-checked"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      data-checked=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-checked=""
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="radio-checked-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 3`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="radio-required-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    htmlFor="radio-required"
  >
    <input
      aria-required={true}
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="radio-required"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={true}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="radio-required-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 4`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="radio-invalid-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    data-invalid=""
    htmlFor="radio-invalid"
  >
    <input
      aria-invalid={true}
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="radio-invalid"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      data-invalid=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-invalid=""
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="radio-invalid-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 5`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="radio-disabled-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    data-disabled=""
    htmlFor="radio-disabled"
  >
    <input
      aria-disabled={true}
      checked={false}
      className="chakra-radio__input"
      disabled={true}
      id="radio-disabled"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      data-disabled=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-disabled=""
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="radio-disabled-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 6`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-radio"
  id="jsxLabel-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    htmlFor="jsxLabel"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="jsxLabel"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
      value="arts"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        <div
          className="css-k008qs"
        >
          <span>
            Arts
          </span>
          <div
            className="css-17xejub"
          />
          <span>
            4
          </span>
        </div>
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="jsxLabel-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 7`] = `
<div
  className="css-1y4kn3e"
  data-testid="ds-radio"
  id="chakra-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    htmlFor="chakra"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="chakra"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 8`] = `
<div
  className="css-1u8qly9"
  data-testid="props"
  id="props-componentWrapper"
>
  <label
    className="chakra-radio css-rfs4w5"
    htmlFor="props"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="props"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="chakra-radio__control css-ssalds"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    className="css-1xdhyk6"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;
